--- a/client/src/components/SideDrawer/SideDrawer.css
+++ b/client/src/components/SideDrawer/SideDrawer.css
@@ -33,7 +33,7 @@
     font-size: 24px;
 }
 
-@media(min-width: 571px) {
+@media(min-width: 601px) {
     .side-drawer {
         display: none;
     }
