--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700|Roboto:400,500&display=swap');
 
+* {
+  box-sizing: border-box;
+}
+
 html {
   height: 100%;
 }
